--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="image-gallery">
-            <h2>App Mockups</h2>
+            <h2>Versión 1.0 Siente tu Barrio App</h2>
             <img src="mockup1.jpg" alt="App Mockup 1">
             <img src="mockup2.jpg" alt="App Mockup 2">
             <!-- Add more images as needed -->
