--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="shortcut icon" href="./images/icon.ico" type="image/x-icon">
     <title>Siente tu Barrio</title>
     <style>
         body {
@@ -11,10 +12,17 @@
         }
 
         .header {
+            display: flex;
+            align-items: center;
+            justify-content: center;
             background-color: #007bff;
             color: white;
-            text-align: center;
             padding: 10px 0;
+        }
+
+        .header-logo {
+            height: 50px; /* Adjust the size as needed */
+            margin-right: 10px;
         }
 
         .container {
@@ -54,26 +62,27 @@
 </head>
 <body>
     <div class="header">
-        <h1>Siente tu barrio</h1>
-    </div>
+        <img src="./images/icon.jpeg" alt="App Logo" class="header-logo">
+        <h1>Siente tu barrio App</h1>
+    </div>    
 
     <div class="container">
         <div class="app-info">
-            <h2>About the App</h2>
-            <p>This app is designed to help users manage their tasks efficiently. It includes features like task categorization, reminders, and a user-friendly interface.</p>
+            <h2>Acerca de Siente tu Barrio</h2>
+            <p>"¡Siente tu Barrio!", es la primera aplicación móvil diseñada para abordar el creciente problema del cierre de pequeños comercios locales. Nos enfocamos en digitalizar estos negocios que ofrecen productos sostenibles y de proximidad, aportando nuevas tecnologías de IA como el ChatBot y formación en digitalización. Así conseguiremos hacerlos más visibles y accesibles para la comunidad.</p>
             <!-- Add more paragraphs as needed -->
         </div>
 
         <div class="image-gallery">
             <h2>Versión 1.0 Siente tu Barrio App</h2>
-            <img src="mockup1.jpg" alt="App Mockup 1">
-            <img src="mockup2.jpg" alt="App Mockup 2">
+            <img src="./images/mockup.jpeg" alt="App Mockup 1">
+            <img src="./images/mockup.jpeg" alt="App Mockup 2">
             <!-- Add more images as needed -->
         </div>
 
         <div class="footer">
-            <h2>Contact Us</h2>
-            <p>If you have any questions or feedback, please contact us at <a href="mailto:info@example.com">info@example.com</a>.</p>
+            <h2>Contáctanos</h2>
+            <p>Si tienes alguna pregunta contáctanos vía <a href="https://api.whatsapp.com/send?phone=34613476568&text=Quiero%20%F0%9F%91%8B%20saber%20más%20de%20SienteTuBarrio%20App" target="_blank">WhatsApp</a>.</p>
         </div>
     </div>
 </body>
