--- a/index.html
+++ b/index.html
@@ -48,10 +48,17 @@
             line-height: 1.6;
         }
 
+        .image-gallery {
+            text-align: center;
+        }
+
         .image-gallery img {
-            width: 100%;
+            width: 50%;
             margin-bottom: 20px;
             border-radius: 5px;
+            border: 1px solid black;
+            border-radius: 8px;
+            padding: 12px;
         }
 
         .footer {
