Initial commit -m new version

--- a/index.html
+++ b/index.html
@@ -1,96 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="./images/icon.ico" type="image/x-icon">
     <title>Siente tu Barrio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-
-        .header {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: #007bff;
-            color: white;
-            padding: 10px 0;
-        }
-
-        .header-logo {
-            height: 50px; /* Adjust the size as needed */
-            margin-right: 10px;
-        }
-
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-        }
-
-        .app-info, .image-gallery, .footer {
-            padding: 20px;
-            background: white;
-            border-radius: 5px;
-            margin-top: 20px;
-        }
-
-        .app-info h2, .image-gallery h2, .footer h2 {
-            margin: 0;
-            padding-bottom: 10px;
-            color: #333;
-        }
-
-        .app-info p, .footer p {
-            line-height: 1.6;
-        }
-
-        .image-gallery {
-            text-align: center;
-        }
-
-        .image-gallery img {
-            width: 50%;
-            margin-bottom: 20px;
-            border-radius: 5px;
-            border: 1px solid black;
-            border-radius: 8px;
-            padding: 12px;
-        }
-
-        .footer {
-            text-align: center;
-            font-size: 0.9em;
-        }
-    </style>
 </head>
 <body>
-    <div class="header">
-        <img src="./images/icon.jpeg" alt="App Logo" class="header-logo">
-        <h1>Siente tu barrio App</h1>
-    </div>    
-
-    <div class="container">
-        <div class="app-info">
-            <h2>Acerca de Siente tu Barrio</h2>
-            <p>"¡Siente tu Barrio!", es la primera aplicación móvil diseñada para abordar el creciente problema del cierre de pequeños comercios locales. Nos enfocamos en digitalizar estos negocios que ofrecen productos sostenibles y de proximidad, aportando nuevas tecnologías de IA como el ChatBot y formación en digitalización. Así conseguiremos hacerlos más visibles y accesibles para la comunidad.</p>
-            <!-- Add more paragraphs as needed -->
-        </div>
-
-        <div class="image-gallery">
-            <h2>Versión 1.0 Siente tu Barrio App</h2>
-            <img src="./images/mockup.jpeg" alt="App Mockup 1">
-            <img src="./images/mockup.jpeg" alt="App Mockup 2">
-            <!-- Add more images as needed -->
-        </div>
-
-        <div class="footer">
-            <h2>Contáctanos</h2>
-            <p>Si tienes alguna pregunta contáctanos vía <a href="https://api.whatsapp.com/send?phone=34613476568&text=Quiero%20%F0%9F%91%8B%20saber%20más%20de%20SienteTuBarrio%20App" target="_blank">WhatsApp</a>.</p>
-        </div>
-    </div>
+    <section class="hero-section">
+        <img src="./images/logo.png" alt="logo" class="hero-logo">
+    </section>    
+    <section class="aspects-section"></section>
+    <section class="views-section"></section>
+    <section class="contact-section"></section>
 </body>
 </html>
