--- a/index.html
+++ b/index.html
@@ -1,18 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="./images/icon.ico" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" href="./images/icon.ico" type="image/x-icon" />
     <title>Siente tu Barrio</title>
-</head>
-<body>
+  </head>
+  <body>
     <section class="hero-section">
-        <img src="./images/logo.png" alt="logo" class="hero-logo">
-    </section>    
-    <section class="aspects-section"></section>
+      <img src="./images/logo.png" alt="logo" class="hero-logo" />
+    </section>
+    <section class="aspects-section">
+      <h2>SIENTE TU BARRIO</h2>
+      <h3>Aspectos que nos diferencian</h3>
+      <div class="features">
+        <div class="feature">
+          <div class="icon">
+            <img src="./images/online-learning.png" alt="" />
+          </div>
+          <p>Formación gratuita e intuitiva</p>
+        </div>
+        <div class="feature">
+          <div class="icon">
+            <img src="./images/huella.png" alt="" />
+          </div>
+          <p>Reducción huella de carbono</p>
+        </div>
+        <div class="feature">
+          <div class="icon">
+            <img src="./images/economy.png" alt="" />
+          </div>
+          <p>Fomentar producto local y mejora de la economía española</p>
+        </div>
+        <div class="feature">
+          <div class="icon">
+            <img src="./images/relaciones.png" alt="" />
+          </div>
+          <p>Mejora de las relaciones sociales cercanas</p>
+        </div>
+      </div>
+    </section>
+
     <section class="views-section"></section>
     <section class="contact-section"></section>
-</body>
+  </body>
 </html>
