New version working on

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="shortcut icon" href="./images/icon.ico" type="image/x-icon" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <title>Siente tu Barrio</title>
   </head>
   <body>
@@ -42,7 +43,32 @@
       </div>
     </section>
 
-    <section class="views-section"></section>
-    <section class="contact-section"></section>
+    <section class="section-pymes">
+      <h2>Diseñada para PYMES</h2>
+      <p>Ofrece un ChatBot de ayuda para el comercio, junto a diversos curso de formación intuitivos para facilitar la digitalización de su comercio</p>
+      <div class="mockup-container">
+          <img src="./images/pymes-view.jpeg" alt="ChatBot Mockup">
+      </div>
+  </section>
+  
+  <section class="section-usuarios">
+      <h2>Diseñada para Usuarios</h2>
+      <p>Ofrece un catálogo de los diversos productos que ofrecen los comercios junto a un mapa en base a la localización que muestra los locales cercanos en los que podría estar interesado el usuario</p>
+      <div class="mockup-container">
+          <img src="./images/users-view.jpeg" alt="User Interface Mockup">
+      </div>
+  </section>
+  
+  <section class="contact-section">
+    <h2>Contáctanos</h2>
+    <div class="image-container">
+        <img src="./images/group.jpg" alt="Foto de equipo">
+    </div>
+    <div class="contact-info">
+      <h3>IG: @SienteTuBarrio || Tiktok: SienteTuBarrio || Correo: SienteTuBarrio@STB.com  teléfono: xxx-xx-xx-xx</h3>
+    </div>
+  </section>
+
+
   </body>
 </html>
