--- a/index.html
+++ b/index.html
@@ -78,12 +78,23 @@
       <div class="image-container">
         <img src="./images/group.jpg" alt="Foto de equipo" />
       </div>
-      <div class="contact-info">
-        <h3>
-          IG: @SienteTuBarrio || Tiktok: SienteTuBarrio || Correo:
-          SienteTuBarrio@STB.com teléfono: xxx-xx-xx-xx
-        </h3>
-      </div>
     </section>
+    <footer class="social-footer">
+      <ul>
+        <li>
+          <a href="https://www.instagram.com/sientetubarrio" target="_blank">
+            <img src="./images/instagram.png" alt="Instagram" />
+            @SienteTuBarrio
+          </a>
+        </li>
+        <li>
+            <a href="https://www.tiktok.com/@sientetubarrio" target="_blank">
+                <img src="./images/tiktok2.png" alt="TikTok" />
+                @SienteTuBarrio
+            </a>
+        </li>
+      </ul>
+  </footer>
+  
   </body>
 </html>
